feature - allow sso menu to be always visible or not

--- a/themes/menu/menu.css
+++ b/themes/menu/menu.css
@@ -5,7 +5,7 @@
   font-size: 12px;
   text-align:center;
   margin-left:auto;
-  position:fixed;
+  position:$visible$;
   right: $right$;
   top: $top$;
   left: $left$;
