--- a/themes/topbar/topbar.css
+++ b/themes/topbar/topbar.css
@@ -5,7 +5,7 @@
   font-size: 12px;
   background-color: $bgcolor$;
   text-align:left;
-  position:fixed;
+  position:$visible$;
   top:0px;
   left:0px;
   width:100%;
