features : users improvements
- allow user filter by application access
- add a flag (can_ask) for disable request access to other applications
for specific users

--- a/css/sso.css
+++ b/css/sso.css
@@ -171,6 +171,14 @@ fieldset.search td.legend {
   text-align:right;
 }
 
+fieldset.search td.filters {
+	text-align: center;
+}
+fieldset.search .filter {
+  display: inline-block;
+  padding: 1px 10px;
+  white-space: nowrap;
+}
 
 /*** Pagination ***/
 .pagination {
